# unluac-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README_cn.md  README_en.md  luac.out
.cargo/: config.toml
.github/: copilot-instructions.md
.github/scripts/: sync_versions.mjs
.github/workflows/: deploy-web.yml  release.yml
docs/: agent.md  ai-notice.md  debug.md  design.md  refactor.md
docs/design/: 0.introduce.md  1.parser.md  10.debugging.md  11.test.md  2.transformer.md  3.cfg-dataflow.md  3.structure.md  4.structure.md  5.hir.md  6.ast.md  7.readability.md  8.naming.md  9.generate.md
docs/dialect/: luajit.md  luau.md
examples/: debug.rs
lua/: README.md
src/: cli.rs  debug.rs  generate.rs  lib.rs  naming.rs  readability.rs  scheduler.rs  timing.rs
src/ast/: build.rs  common.rs  debug.rs  error.rs  features.rs  mod.rs  pretty.rs  readability.rs  traverse.rs
src/cfg/: build.rs  common.rs  dataflow.rs  debug.rs  graph.rs  mod.rs
src/debug/: colorize.rs  focus.rs  mod.rs  tests.rs
src/decompile/: contracts.rs  debug.rs  error.rs  mod.rs  options.rs  output_plan.rs  pipeline.rs  repo_debug.rs  stages.rs  state.rs  tests.rs
src/generate/: common.rs  debug.rs  doc.rs  emit.rs  error.rs  render.rs
src/hir/: analyze.rs  common.rs  debug.rs  decision.rs  expr_safety.rs  mod.rs  promotion.rs  simplify.rs  traverse.rs
src/naming/: allocate.rs  assign.rs  ast_facts.rs  common.rs  debug.rs  error.rs  evidence.rs  hints.rs  lexical.rs  strategy.rs  support.rs  validate.rs
src/parser/: debug.rs  error.rs  mod.rs  options.rs  raw.rs  reader.rs
tests/: decompile_pipeline.rs  lua51_parser.rs  regression.rs  unit.rs
xtask/: Cargo.toml
(+532 files in other folders)
