[package]
name = "unluac"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "unit_case_runner"
path = "tests/support/unit_case_runner.rs"

[lints]
workspace = true

[workspace]
members = ["xtask"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
manual_ok_or = "deny"
needless_borrow = "deny"
needless_collect = "deny"
redundant_clone = "deny"

[dependencies]
encoding_rs = "0.8.35"
owo-colors = "4.2.2"
thiserror = "2.0.12"
