[package]
name = "unluac"
version = "1.0.0"
edition = "2024"
description = "Multi-dialect Lua decompiler written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/x3zvawq/unluac-rs"
homepage = "https://github.com/x3zvawq/unluac-rs"
documentation = "https://docs.rs/unluac"
rust-version = "1.94"
keywords = ["lua", "luajit", "luau", "decompiler", "bytecode"]
exclude = [
    ".vscode/**",
    "lua/**",
    "packages/**",
    "tests/**",
    "xtask/**"
]

[features]
default = ["decompile-debug", "timing-report"]
decompile-debug = []
timing-report = []

[lints]
workspace = true

[workspace]
members = [
    "xtask",
    "packages/unluac-cli",
    "packages/unluac-test-support",
    "packages/unluac-wasm",
]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
manual_ok_or = "deny"
needless_borrow = "deny"
needless_collect = "deny"
redundant_clone = "deny"

[dependencies]
encoding_rs = "0.8.35"
owo-colors = "4.2.2"
thiserror = "2.0.12"

[dev-dependencies]
unluac-test-support = { path = "packages/unluac-test-support" }
